--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test:unit:dev": "cypress open --component"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
